<resources>
    <string name="app_name">NUMAD19F-YangyuqiChang</string>
    <string name="action_settings">Settings</string>
    <string name="convert_string">Convert</string>
    <string name="about">about</string>
    <string name="welcome_to_my_android_app">Welcome to my Android App!</string>
    <string name="it_is_a_link_collector">it_is_a_link_collector</string>
    <string name="insert">insert</string>
    <string name="insert_link_here">insert_link_here</string>
    <string name="link_collector">Link Collector</string>
    <string name="write_here">Write here</string>
    <string name="link">It is a link collector!</string>
    <string name="put_link_name_here">Put Link Name Here</string>
    <string name="insertlinkhere">Insert Link Here</string>
    <string name="insert_name_here">insert_name_here</string>
    <string name="why_you_don_t_update">Why you don\'t update</string>
    <string name="Insert_Link_Here">Insert Link Here</string>
    <string name="prime_search">Prime Search</string>
    <string name="find_primes">Find Primes</string>
    <string name="watch_time">Watch Time</string>
    <string name="timer_opened">timer opened!</string>
    <string name="Wakeup">Wakeup</string>
    <string name="cancel_the_timer">Cancel The Timer</string>
    <string name="start_the_timer">Start The Timer</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="show_location">Show Location</string>
    <string name="request_lcation">Request Lcation</string>
    <string name="lattitude_longitude">Lattitude, Longitude:</string>
    <string name="add">Add</string>
    <string name="view_data">View Data</string>
    <string name="delete">delete</string>
    <string name="openlink">OpenLink</string>

</resources>
